--- a/www/00Index.html
+++ b/www/00Index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html><head><title>R: Soil spectroscopy tools and reference models</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="R.css">
+<link rel="stylesheet" type="text/css" href="http://www.r-project.org/R.css">
 </head><body>
 <h1> Soil spectroscopy tools and reference models
-<img class="toplogo" src="../../../doc/html/logo.jpg" alt="[R logo]">
+<img class="toplogo" src="http://www.r-project.org/Rlogo.jpg" alt="[R logo]"></h1>
 </h1>
 <hr>
 <div align="center">
-<a href="../../../doc/html/packages.html"><img src="../../../doc/html/left.jpg" alt="[Up]" width="30" height="30" border="0"></a>
-<a href="../../../doc/html/index.html"><img src="../../../doc/html/up.jpg" alt="[Top]" width="30" height="30" border="0"></a>
-</div><h2>Documentation for package &lsquo;soil.spec&rsquo; version 0.2.0</h2>
-
-<ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
+</div>
+<h2>Documentation for package &lsquo;soil.spec&rsquo; version 0.2-0</h2>
+<ul><li><a href="http://plotkml.r-forge.r-project.org/">R-Forge project</a>.</li>
+<li><a href="http://cran.r-project.org/web/packages/">Overview of contributed packages</a>.</li>
 </ul>
 
 <h2>Help Pages</h2>
-
 
 <table width="100%">
 <tr><td width="25%"><a href="fit.SpectraModel.html">a.ALUM3S</a></td>
