added broken link
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/soilspec@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/00Index.html
+++ b/www/00Index.html
@@ -10,7 +10,7 @@
 <div align="center">
 </div>
 <h2>Documentation for package &lsquo;soil.spec&rsquo; version 0.2-0</h2>
-<ul><li><a href="http://plotkml.r-forge.r-project.org/">R-Forge project</a>.</li>
+<ul><li><a href="http://soilspec.r-forge.r-project.org/">R-Forge project</a>.</li>
 <li><a href="http://cran.r-project.org/web/packages/">Overview of contributed packages</a>.</li>
 </ul>
 
