--- a/www/wavenumbers.html
+++ b/www/wavenumbers.html
@@ -10,7 +10,7 @@
 
 <h3>Description</h3>
 
-<p>Standard bands with upper and lower limits (wavenumbers)</p>
+<p>Standard band names with upper and lower limits (wavenumbers)</p>
 
 
 <h3>Usage</h3>
