reorganized R scripts and moved some of the scripts to the 'dev' directory
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/soilspec@14 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/00Index.html
+++ b/www/00Index.html
@@ -16,37 +16,14 @@
 
 <h2>Help Pages</h2>
 
+
 <table width="100%">
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.ALUM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.ECAM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.EMGM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.ENAM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.EXB</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.EXKM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.NITCNS</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.ORCCNS</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.PHIHOX</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">a.SNDLDF</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
 <tr><td width="25%"><a href="afspec.html">afspec</a></td>
 <td>Sample soil spectroscopy data from Africa Sentinel Sites</td></tr>
-<tr><td width="25%"><a href="align.col.html">align.col</a></td>
-<td>Combines two files and matches columns</td></tr>
-<tr><td width="25%"><a href="average.html">average</a></td>
-<td>Averages data with replicate records</td></tr>
-<tr><td width="25%"><a href="bart.pred.html">bart.pred</a></td>
-<td>Prepares HTSxt, Alpha and MPA spectral data tables to be used by the prediction engine</td></tr>
-<tr><td width="25%"><a href="explore.data.html">explore.data</a></td>
-<td>Data summary</td></tr>
+<tr><td width="25%"><a href="afss.html">afss</a></td>
+<td>Africa Sentinel Site data (wet chemistry)</td></tr>
+<tr><td width="25%"><a href="afss.html">afss.spec</a></td>
+<td>Africa Sentinel Site data (wet chemistry)</td></tr>
 <tr><td width="25%"><a href="fit.SpectraModel.html">fit</a></td>
 <td>Fits a calibration model for soil spectroscopy</td></tr>
 <tr><td width="25%"><a href="fit.SpectraModel.html">fit-method</a></td>
@@ -75,40 +52,16 @@
 <td>Fits a calibration model for soil spectroscopy</td></tr>
 <tr><td width="25%"><a href="fit.SpectraModel.html">m.SNDLDF</a></td>
 <td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.ALUM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.ECAM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.EMGM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.ENAM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.EXB</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.EXKM3S</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.NITCNS</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.ORCCNS</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.PHIHOX</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
-<tr><td width="25%"><a href="fit.SpectraModel.html">n.SNDLDF</a></td>
-<td>Fits a calibration model for soil spectroscopy</td></tr>
 <tr><td width="25%"><a href="plot.Spectra.html">plot</a></td>
 <td>Plots spectral signatures</td></tr>
 <tr><td width="25%"><a href="plot.Spectra.html">plot-method</a></td>
 <td>Plots spectral signatures</td></tr>
 <tr><td width="25%"><a href="ken.sto.html">plot.ken.sto</a></td>
 <td>Sample selection based on the Kennard-Stone algorithm</td></tr>
-<tr><td width="25%"><a href="regr.html">plot.regr</a></td>
-<td>Regression functions for soil spectral analysis</td></tr>
 <tr><td width="25%"><a href="plot.Spectra.html">plot.Spectra</a></td>
 <td>Plots spectral signatures</td></tr>
 <tr><td width="25%"><a href="trans.html">plot.trans</a></td>
 <td>Spectral transformation</td></tr>
-<tr><td width="25%"><a href="regr.html">pred.regr</a></td>
-<td>Regression functions for soil spectral analysis</td></tr>
 <tr><td width="25%"><a href="predict.SpectraPoints.html">predict-method</a></td>
 <td>Predict soil properties from an object of class '"SpectraPoints"'</td></tr>
 <tr><td width="25%"><a href="predict.SpectraPoints.html">predict.SpectraPoints</a></td>
@@ -119,8 +72,6 @@
 <td>Reads binary OPUS files containing spectroscopy</td></tr>
 <tr><td width="25%"><a href="read.spc.html">read.spc</a></td>
 <td>Reads spectral spc-files into R</td></tr>
-<tr><td width="25%"><a href="regr.html">regr</a></td>
-<td>Regression functions for soil spectral analysis</td></tr>
 <tr><td width="25%"><a href="SpectraPoints.html">reshape.SpectraPoints</a></td>
 <td>A class for spectral absorbance measurements</td></tr>
 <tr><td width="25%"><a href="spec.env.html">spec.env</a></td>
@@ -143,8 +94,6 @@
 <td>A class for spectral absorbance measurements</td></tr>
 <tr><td width="25%"><a href="SpectraPoints.html">summary-method</a></td>
 <td>A class for spectral absorbance measurements</td></tr>
-<tr><td width="25%"><a href="regr.html">summary.regr</a></td>
-<td>Regression functions for soil spectral analysis</td></tr>
 <tr><td width="25%"><a href="trans.html">trans</a></td>
 <td>Spectral transformation</td></tr>
 <tr><td width="25%"><a href="SpectraPoints.html">validate-method</a></td>
@@ -153,9 +102,5 @@
 <td>A class for spectral absorbance measurements</td></tr>
 <tr><td width="25%"><a href="wavenumbers.html">wavenumbers</a></td>
 <td>Standard bands</td></tr>
-<tr><td width="25%"><a href="wl2wn.html">wl2wn</a></td>
-<td>Converts wavenumbers to wavelengths and vice versa</td></tr>
-<tr><td width="25%"><a href="wl2wn.html">wn2wl</a></td>
-<td>Converts wavenumbers to wavelengths and vice versa</td></tr>
 </table>
 </body></html>
