package checked for CRAN
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/soilspec@16 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/www/SpectraPoints.html
+++ b/www/SpectraPoints.html
@@ -61,6 +61,8 @@
 <pre> 
 ## generate the class:
 library(sp)
+library(rgdal)
+
 data(afspec)
 ## get spatial coordinates:
 sp &lt;- afspec$samples[,c("Longitude","Latitude")]
