--- a/www/afspec.html
+++ b/www/afspec.html
@@ -80,6 +80,7 @@
 
 <pre>
 library(sp)
+library(rgdal)
 data(afspec)
 sp &lt;- afspec$samples[,c("Longitude","Latitude")]
 coordinates(sp) &lt;- ~Longitude+Latitude
@@ -107,7 +108,8 @@ plotKML(afspec.pnts["ORCCNS"], colour_scale=SAGA_pal[[1]])
 library(GSIF)
 data(soil.legends)
 brks = c(soil.legends[["PHIHOX"]]$MIN[1]/10, soil.legends[["PHIHOX"]]$MAX/10)
-levs = paste(signif(rowMeans(cbind(soil.legends[["PHIHOX"]]$MAX,soil.legends[["PHIHOX"]]$MIN))/10, 2))
+pH.range &lt;- cbind(soil.legends[["PHIHOX"]]$MAX, soil.legends[["PHIHOX"]]$MIN)
+levs = paste(signif(rowMeans(pH.range)/10, 2))
 afspec.pnts$Col &lt;- cut(afspec.pnts$PHIHOX, breaks=brks, labels=levs)
 plotKML(afspec.pnts["Col"], colour_scale=soil.legends[["PHIHOX"]]$COLOR)
 
