--- a/www/fit.SpectraModel.html
+++ b/www/fit.SpectraModel.html
@@ -114,8 +114,11 @@ fit(formulaString, sampled, reference, ...)
 <pre>
 ## Not run: 
 ## build a callibration model using AfSIS data:
-data(afss)
 library(plyr)
+library(sp)
+library(rgdal)
+
+data(afss)
 afss.tbl &lt;- join(afss$sites, afss$horizons)
 con &lt;- url("http://gsif.isric.org/lib/exe/fetch.php?media=afss.spec.rda")
 load(con)
