--- a/www/read.opus.html
+++ b/www/read.opus.html
@@ -133,7 +133,7 @@ for(k in 1:length(nm)){
   model = get(paste("m.", nm[k], sep="")), prob. = .75) )
 }
 pr &lt;- do.call(cbind, pr.lst)
-View(pr)
+str(pr)
 </pre>
 
 <hr><div align="center">[Package <em>soil.spec</em> version 0.2.0 <a href="00Index.html">Index</a>]</div>
